# cross-compile-cgo-bazel

./: MODULE.bazel  README.md  go.mod
hello/: BUILD  hello.c  hello.go
platform/: BUILD
toolchain/: BUILD  rv64_toolchain.bzl
