module(name = "go_bazel_cgo_cross_compile", version = "0.0.1")

bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "platforms", version = "0.0.11")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

register_toolchains("//toolchain:riscv64_toolchain_from_linux_x86_64")
